// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTableFilter component should render correctly with custom filter button 1`] = `
<div>
  <div
    class="pf-v5-c-input-group ins-c-filter  undefined"
  >
    <span
      class="pf-v5-c-form-control"
    >
      <input
        aria-invalid="false"
        aria-label="simple-table-filter"
        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        placeholder="Search items"
        type="text"
        value=""
      />
    </span>
    <button
      action="filter"
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Custom title
    </button>
  </div>
</div>
`;

exports[`SimpleTableFilter component should render correctly with custom placeholder 1`] = `
<div>
  <div
    class="pf-v5-c-input-group ins-c-filter  undefined"
  >
    <span
      class="pf-v5-c-form-control"
    >
      <input
        aria-invalid="false"
        aria-label="simple-table-filter"
        data-ouia-component-id="OUIA-Generated-TextInputBase-3"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        placeholder="Custom placeholder"
        type="text"
        value=""
      />
    </span>
    <button
      action="filter"
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Filter
    </button>
  </div>
</div>
`;

exports[`SimpleTableFilter component should render correctly with filter button 1`] = `
<div>
  <div
    class="pf-v5-c-input-group ins-c-filter  undefined"
  >
    <span
      class="pf-v5-c-form-control"
    >
      <input
        aria-invalid="false"
        aria-label="simple-table-filter"
        data-ouia-component-id="OUIA-Generated-TextInputBase-1"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        placeholder="Search items"
        type="text"
        value=""
      />
    </span>
    <button
      action="filter"
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Filter
    </button>
  </div>
</div>
`;

exports[`SimpleTableFilter component should render correctly with filter options 1`] = `
<div>
  <div
    class="pf-v5-c-input-group ins-c-filter  undefined"
  >
    <button
      aria-expanded="false"
      class="pf-v5-c-menu-toggle"
      type="button"
    >
      <span
        class="pf-v5-c-menu-toggle__text"
      >
        Filter options
      </span>
      <span
        class="pf-v5-c-menu-toggle__controls"
      >
        <span
          class="pf-v5-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
    <span
      class="pf-v5-c-form-control"
    >
      <input
        aria-invalid="false"
        aria-label="simple-table-filter"
        data-ouia-component-id="OUIA-Generated-TextInputBase-5"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        placeholder="Search items"
        type="text"
        value=""
      />
    </span>
    <button
      action="filter"
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-5"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Filter
    </button>
  </div>
</div>
`;

exports[`SimpleTableFilter component should render correctly without filter button 1`] = `
<div>
  <div
    class="pf-v5-c-input-group ins-c-filter  undefined"
  >
    <span
      class="pf-v5-c-form-control"
    >
      <input
        aria-invalid="false"
        aria-label="simple-table-filter"
        data-ouia-component-id="OUIA-Generated-TextInputBase-4"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        placeholder="Search items"
        type="text"
        value=""
      />
    </span>
    <button
      action="filter"
      aria-disabled="false"
      class="pf-v5-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-4"
      data-ouia-component-type="PF5/Button"
      data-ouia-safe="true"
      type="button"
    >
      Filter
    </button>
  </div>
</div>
`;
